--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,8 +2,17 @@
 // Fonts
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 
+// Font Awesome
+@import "node_modules/font-awesome/scss/font-awesome";
+
+// CropperJs
+@import "node_modules/cropperjs/dist/cropper";
+
 // Variables
 @import "variables";
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+// App's Stylesheet
+@import "citeup/index";
