--- a/resources/assets/sass/citeup/_index.scss
+++ b/resources/assets/sass/citeup/_index.scss
@@ -1,3 +1,39 @@
+
+#app-main {
+
+    $sidebar-width: 250px;
+    $screen-md: 992px;
+
+    min-height: 100vh;
+
+    %main-divs {
+        float: left;
+    }
+
+    #app-sidebar {
+        @extend %main-divs;
+    }
+
+    .app-view {
+        @extend %main-divs;
+        // padding: 15px;
+        width: 100%;
+
+        @media (min-width: $screen-md) {
+            width: calc(100% - 250px);
+        }
+
+        & > h1 {
+            font-size: 28px;
+            font-weight: 300;
+
+            .fa {
+                margin-right: 3px;
+            }
+        }
+    }
+}
+
 .btn-circle {
     border-radius: 50%;
     padding: 13px 10px;
