--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,9 +20,8 @@
 // Eonasdan Bootstrap DateTime Picker
 @import "node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker";
 
-// Quill Text Editor
-@import "node_modules/quill/dist/quill.core";
-@import "node_modules/quill/dist/quill.snow";
+// Vue WYSIWYG
+@import "node_modules/vue-wysiwyg/dist/vueWysiwyg";
 
 // App's Stylesheet
 @import "citeup/index";
