--- a/resources/assets/sass/citeup/_landing.scss
+++ b/resources/assets/sass/citeup/_landing.scss
@@ -22,8 +22,23 @@ $light-text-color: #eeeedd;
 #app-front {
     background: #fff;
 
-    a {
+    a:not(.btn) {
         color: $signature-light;
+    }
+
+    .form-control:focus {
+        border-color: $signature-light;
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 
+                    0 0 8px transparentize($signature-light, 0.6);
+    }
+
+    .btn-primary {
+        background-color: $signature-light;
+        border-color: darken($signature-light, 3%);
+
+        &:hover {
+            background-color: lighten($signature-light, 3%);
+        }
     }
 }
 
@@ -75,14 +90,15 @@ $light-text-color: #eeeedd;
 
 #front-welcometron {
 
-    $welcometron-bg: #0f0f0f;
+    $welcometron-bg: #2a2a2a;
     $welcometron-color: $light-text-color;
 
     height: 619px;
     background-color: $welcometron-bg;
-    background-image: url(../storage/images/web/bg_outline.png);
-    background-position: 0% 70%;
-    background-repeat: repeat-x;
+    background-image: url(../storage/images/web/bg_tron.png);
+    background-position: center center;
+    background-size: 1300px;
+    background-repeat: no-repeat;
 
     color: $welcometron-color;
 
@@ -131,12 +147,12 @@ $light-text-color: #eeeedd;
 
 #front-activities {
 
-    $icon-bg: #b1b1b1;
+    $icon-bg: $signature-dark;
 
     background: $signature-lighter;
     background-image: url(../storage/images/web/bg_about.png);
     background-repeat: repeat-x;
-    background-size: 500px;
+    background-size: 800px;
     padding: 20px 0 70px;
     height: 375px;
 
@@ -159,10 +175,14 @@ $light-text-color: #eeeedd;
         margin-top: 10px;
     }
 
-    .img-holder {
+    .icon-holder {
         border-radius: 4px 4px 0 0;
         padding: 0;
         background: $icon-bg;
+    }
+
+    .activity-icon {
+        height: 200px;
     }
 }
 
@@ -170,12 +190,24 @@ $light-text-color: #eeeedd;
     height: 500px;
     background: #efdfbf;
 
+    .map-content {
+        height: 500px;
+    }
+
+    .map-cover {
+        position: absolute;
+        background: transparentize($signature-lighter, 0.7);
+        width: 100%;
+        height: 500px;
+        z-index: 90;
+    }
+
     .map-info {
-        position: relative;
+        position: absolute;
         z-index: 99;
         width: 400px;
-        top: 150px;
-        left: 50px;
+        margin-top: -310px;
+        margin-left: 50px;
         background: $signature-dark;
         color: $light-text-color;
         border: 1px solid darken($signature-dark, 4%);
@@ -196,7 +228,8 @@ $light-text-color: #eeeedd;
     }
 
     .go-to-location {
-        color: $light-text-color;
+        color: $light-text-color !important
+        ;
     }
 }
 
@@ -306,63 +339,96 @@ $light-text-color: #eeeedd;
     background-repeat: repeat-x;
     background-size: 1150px;
 
-    .form-container {
-        width: 700px;
-        margin: 0 auto;
+    .panel {
+        margin: 0;
+        border: none;
+        border-top: 5px solid $signature-light;
+        box-shadow: 0px 5px 10px 1px rgba(221,115,34,0.5);
 
-        .panel {
-            margin: 0;
-            border: none;
-            border-top: 5px solid $signature-light;
-            box-shadow: 0px 5px 10px 1px rgba(221,115,34,0.5);
-        }
+        &.panel-social {
+            text-align: center;
 
-        .panel-body {
-            border-bottom: 1px solid #ddd;
-            padding: 25px 30px;
+            h2 {
+                font-size: 18pt;
+            }
 
-            &:last-child {
-                border-bottom: none;
+            .row, .col-sm-3 {
+                margin-top: 0;
+            }
 
-                div {
-                    margin-top: 12px;
+            a:hover {
+                color: $signature-lighter;
+            }
+
+            .line {
+                font-size: 1.6em;
+                background-color: $signature-light;
+                color: #fff;
+                padding: 8px;
+                border-radius: 10px;
+                line-height: 1.94;
+                display: inline-block;
+                font-weight: 700;
+                margin-top: 5px;
+
+                &:hover {
+                    color: #fff;
+                    background: $signature-lighter;
+                    text-decoration: none;
                 }
             }
         }
 
-        .form-body {
-            padding: 30px;
-        }
+        &.panel-contact-person {
+            margin-top: 30px;
 
-        h2 {
-            font-weight: 300;
-            margin: 0;
-        }
-
-        .control-label {
-            font-weight: normal;
-        }
-
-        .form-control {
-            border-color: #ccc;
-            border-radius: 0;
-        }
-
-        .form-control:focus {
-            border-color: $signature-light;
-            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 
-                        0 0 8px transparentize($signature-light, 0.6);
-        }
-
-        .btn-primary {
-            background-color: $signature-light;
-            border-color: darken($signature-light, 3%);
-
-            &:hover {
-                background-color: lighten($signature-light, 3%);
+            h2 {
+                font-size: 18pt;
             }
         }
+    }
 
+    .panel-body {
+        border-bottom: 1px solid #ddd;
+        padding: 25px 30px;
+
+        &:last-child {
+            border-bottom: none;
+
+            div {
+                margin-top: 12px;
+            }
+        }
+    }
+
+    .contact-person-item {
+        font-size: 16pt;
+
+        & > div {
+            margin-top: 0 !important;
+        }
+
+        &:first-child {
+            margin-top: 0 !important;
+        }
+    }
+
+    .form-body {
+        padding: 30px;
+    }
+
+    h2 {
+        font-weight: 300;
+        margin: 0;
+    }
+
+    .control-label {
+        font-weight: normal;
+    }
+
+    .form-control {
+        border-color: #ccc;
+        border-radius: 0;
     }
 
 }
