--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -20,8 +20,8 @@
 // Eonasdan Bootstrap DateTime Picker
 @import "node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker";
 
-// Vue WYSIWYG
-@import "node_modules/vue-wysiwyg/dist/vueWysiwyg";
+// Trix
+@import "node_modules/trix/dist/trix";
 
 // App's Stylesheet
 @import "citeup/index";
