--- a/resources/assets/sass/citeup/front/_landing.scss
+++ b/resources/assets/sass/citeup/front/_landing.scss
@@ -1,45 +1,9 @@
 
-@font-face {
-    font-family: 'Rounded Elegance';
-    src: url('fonts/Rounded_Elegance.ttf');
-}
-
-$title-font-family: 'Rounded Elegance', Open Sans, sans-serif;
-
-$signature-lighter: #ffc533;
-$signature-light: #f49e26;
-$signature-dark: #dd7322;
-
-$light-text-color: #eeeedd;
-
 .short-middle-bar {
     width: 400px;
     border-color: #ddd;
     margin-top: 0;
     margin-bottom: 0;
-}
-
-#app-front {
-    background: #fff;
-
-    a:not(.btn) {
-        color: $signature-light;
-    }
-
-    .form-control:focus {
-        border-color: $signature-light;
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 
-                    0 0 8px transparentize($signature-light, 0.6);
-    }
-
-    .btn-primary {
-        background-color: $signature-light;
-        border-color: darken($signature-light, 3%);
-
-        &:hover {
-            background-color: lighten($signature-light, 3%);
-        }
-    }
 }
 
 #front-nav {
@@ -156,19 +120,31 @@ $light-text-color: #eeeedd;
     padding: 20px 0 70px;
     height: 375px;
 
+    .container {
+        position: absolute;
+        width: 100%;
+        margin-top: -100px;
+        z-index: 100;
+    }
+
     .row {
         margin-top: 40px;
         width: 1100px;
     }
 
     .activity-item {
-        position: absolute;
         border: none;
+        display: block;
+        color: $original-text-color !important;
         box-shadow: 0px 0px 10px 1px rgba(221,115,34,0.5);
-        height: 450px;
+        height: 400px;
         margin: 0 25px;
-        top: -100px;
-        z-index: 100;
+        transition: 0.2s;
+
+        &:hover {
+            text-decoration: none;
+            transform: scale(1.05);
+        }
     }
 
     .activity-title {
@@ -183,6 +159,72 @@ $light-text-color: #eeeedd;
 
     .activity-icon {
         height: 200px;
+    }
+}
+
+#front-prizes {
+    background: $signature-lighter;
+    height: 590px;
+
+    .container {
+        position: absolute;
+        width: 100%;
+        margin-top: 20px;
+        z-index: 100;
+    }
+
+    .panel-prizes {
+        width: 1022px;
+        margin-top: 40px;
+        border: none;
+        box-shadow: 0px 0px 10px 1px rgba(221,115,34,0.5);
+    }
+
+    .prizes-list {
+        margin-left: 0;
+        margin-right: 0;
+        border-top: 1px solid #ddd;
+    }
+
+    .prizes-list-item {
+
+        h3 {
+            margin: 15px 0 30px;
+            font-size: 14pt;
+            color: $signature-dark;
+        }
+
+        &:first-child {
+            border-right: 1px solid #ddd;
+        }
+
+        .prize-wrapper {
+            margin: 20px 0;
+        }
+
+        .prize-place {
+            font-weight: 700;
+            font-size: 14pt;
+            text-transform: uppercase;
+        }
+
+        .prize-qty {
+            margin: 4px 0;
+            font-size: 22pt;
+            font-weight: 300;
+        }
+    }
+
+    .prizes-title {
+        font-weight: 700;
+        font-size: 18pt;
+        text-transform: uppercase;
+    }
+
+    .total-prizes {
+        font-size: 40pt;
+        font-weight: 300;
+        margin: 12px 0;
     }
 }
 
@@ -449,6 +491,7 @@ $light-text-color: #eeeedd;
         height: 75px;
         margin: 10px;
         display: inline-block;
+        vertical-align: top;
         background-color: $signature-light;
     }
 
