--- a/resources/assets/sass/citeup/front/_activities.scss
+++ b/resources/assets/sass/citeup/front/_activities.scss
@@ -78,8 +78,12 @@
         margin: 0 30px 30px 0;
     }
 
+    .btn-register {
+        margin-bottom: 20px;
+    }
+
     .panel-prizes {
-        margin-top: 20px;
+        margin-bottom: 20px;
         text-align: center;
 
         .panel-heading {
@@ -107,7 +111,6 @@
     }
 
     .panel-schedules {
-        margin-top: 20px;
         border-color: darken($signature-dark, 7%);
 
         .panel-heading, .list-group-item {
