--- a/resources/assets/sass/citeup/_front.scss
+++ b/resources/assets/sass/citeup/_front.scss
@@ -61,6 +61,7 @@ $content-min-height: 615px;
 }
 
 @import "front/landing";
+@import "front/about";
 @import "front/activities";
 @import "front/faqs";
 @import "front/news";
