--- a/resources/assets/sass/citeup/front/_news.scss
+++ b/resources/assets/sass/citeup/front/_news.scss
@@ -36,6 +36,7 @@
         }
 
         .panel-body {
+            @extend %no-border-radius;
             border-bottom: 1px solid #ddd;
 
             &:last-child {
