--- a/resources/assets/sass/citeup/front/_about.scss
+++ b/resources/assets/sass/citeup/front/_about.scss
@@ -7,8 +7,9 @@
         padding-bottom: 30px;
     }
     
-    .page-title img {
-        width: 300px;
+    .page-title {
+        color: #fff;
+        font-weight: 700;
     }
 
     .content-container {
@@ -25,8 +26,12 @@
     .panel-content {
         @extend %no-border-radius;
         border: none;
-        margin-bottom: 70px;
+        margin-bottom: 20px;
         box-shadow: 0px 0px 10px 1px rgba(221,115,34,0.5);
+
+        &:last-child {
+            margin-bottom: 70px;
+        }
 
         .panel-body {
             @extend %no-border-radius;
@@ -58,6 +63,56 @@
 
         p.lead {
             margin-bottom: 0;
+        }
+    }
+
+    .main-illustration {
+        width: 100%;
+        margin-bottom: 40px;
+    }
+
+    .main-motto {
+        font-weight: 700;
+        font-size: 16pt;
+        color: #fff;
+        margin-bottom: 40px;
+    }
+
+    .activity-list {
+
+        .activity-list-item {
+            display: block;
+            box-shadow: 0px 0px 10px 1px rgba(221,115,34,0.5);
+            border: none;
+        }
+
+        .activity-name {
+            font-size: 10pt;
+
+            &:hover {
+                text-decoration: none;
+            }
+        }
+
+        img {
+            width: 100%;
+            border-radius: 4px 4px 0 0;
+        }
+    }
+
+    .logo-up-container {
+        margin-top: 40px;
+        margin-bottom: 70px;
+
+        p {
+            color: #fff;
+            font-weight: 600;
+            margin-bottom: 40px;
+        }
+
+        .logo-up {
+            height: 125px;
+            margin: 0 15px;
         }
     }
 
