--- a/resources/assets/sass/citeup/front/_landing.scss
+++ b/resources/assets/sass/citeup/front/_landing.scss
@@ -57,22 +57,32 @@
     $welcometron-bg: #2a2a2a;
     $welcometron-color: $light-text-color;
 
-    height: 619px;
+    height: 750px;
     background-color: $welcometron-bg;
-    background-image: url(../storage/images/web/bg_tron.png);
-    background-position: center center;
-    background-size: 1300px;
+    background-image: url(../storage/images/web/bg_welcometron.png);
+    background-position-x: center; 
+    background-position-y: bottom;
     background-repeat: no-repeat;
 
-    color: $welcometron-color;
+    .logo-placeholder {
+        margin-top: 60px;
+
+        img {
+            width: 300px;
+        }
+    }
+
+    .text-placeholder {
+        margin-top: 225px;
+        color: #161616;
+        font-weight: 700;
+    }
 
     .title {
-        margin-top: 140px;
         width: 500px;
     }
 
     .notice {
-        margin-top: 50px;
         margin-bottom: 0; 
         font-size: 14pt;
     }
@@ -80,12 +90,12 @@
     .countdown {
 
         .unit-item {
-            margin: 0 10px;
         }
 
         .unit-number {
-            font-size: 58pt;
-            font-weight: 300;
+            width: 100px;
+            text-align: center;
+            font-size: 48pt;
         }
 
         .unit-info {
@@ -375,14 +385,16 @@
 
 #front-contact-us {
 
-    padding: 50px 0 60px;
+    padding: 10px 0 60px;
     background-color: $signature-lighter;
     background-image: url(../storage/images/web/bg_contact.png);
     background-repeat: repeat-x;
-    background-size: 1150px;
+    background-size: 900px;
 
     .panel {
-        margin: 0;
+        margin: auto;
+        width: 900px;
+        font-size: 16pt;
         border: none;
         border-top: 5px solid $signature-light;
         box-shadow: 0px 5px 10px 1px rgba(221,115,34,0.5);
@@ -497,19 +509,27 @@
 }
 
 #front-footer {
-    border-top: 1px solid #ddd;
     padding: 20px 0;
+    box-shadow: 0px 5px 10px 1px rgba(221,115,34,0.5);
 
     .upper-yard {
-        padding: 20px 0;
+        paddin: 20px 0 10px;
 
         & > :first-child {
             margin-top: 21px;
         }
     }
 
+    .middle-yard {
+        padding-top: 10px;
+
+        h3 {
+            margin: 0 0 10px;
+        }
+    }
+
     .lower-yard {
-        padding-bottom: 10px 0;
+        padding: 20px 0;
     }
 
     .footer-img {
@@ -526,7 +546,9 @@
         }
     }
 
-    .footer-subtitle {
-        text-decoration: uppercase;
+    .socmeds {
+        a {
+            margin-right: 8px;
+        }
     }
 }
