--- a/resources/assets/sass/citeup/_front.scss
+++ b/resources/assets/sass/citeup/_front.scss
@@ -56,6 +56,7 @@ $content-min-height: 615px;
     background-color: $signature-light;
 }
 
+@import "front/nav";
 @import "front/landing";
 @import "front/about";
 @import "front/activities";
